# AriaUI

./: CMakeLists.txt  Main.qml  main.cpp
src/ui/Colors/: Themes.qml
src/ui/Componets/: CustomButton.qml  CustomIconButton.qml  CustomLabel.qml  CustomToolBarButtons.qml
src/ui/Images/: Images.qrc
src/ui/Pages/: PageODM.qml
